# data-augmentation

./: .cruft.json  .darglint  .flake8  .gitignore  .isort.cfg  .mustache  .pre-commit-config.yaml  LICENSE  README.md  Train CNN.ipynb  Train VAE.ipynb  config.yml  environment.yaml  gdown.sh  mlflow_gc.py  mlflow_gc.sh  noxfile.py  pip_requirements.txt  pyproject.toml  pyproject_sort.py  requirements.txt  scratchpad.ipynb
evaluation/: mlp.py  trainer.py
evaluation/models/: __init__.py  mnist.py
src/: lines_of_code.py  train_vae.py
src/data_augmentation/: __init__.py
src/data_augmentation/VAE/: train_mnist.py  vae_model_v1.py
src/evaluation/: __init__.py  celeba.py  cnn.py  create_datasets.py  evaluate.py  evaluate_cnn.py  mlp.py  plot.py  test.py  train_model.py  train_utils.py  train_vae.py  trainer.py
src/evaluation/models/: __init__.py  cnn_mnist.py  mnist.py  proben1.py
src/examples/: celeba.py  create_datasets.py  plot.py  test_numerical.py  train_cnn.py  train_proben1.py  train_vae.py
src/generative_classifier/: train.py
src/generative_classifier/models/: __init__.py  base.py
src/utils/: __init__.py  misc.py  plotting.py
src/utils/data/: __init__.py  batch_collector.py  dataset.py  dataset_loaders.py  saved_datasets.py  split_datasets.py
src/utils/mlflow/: __init__.py  integration.py
src/utils/models/: __init__.py  base_model.py  model_config.py  model_output.py  pretrained.py
src/utils/trainer/: __init__.py  early_stopping.py  train.py  trainer.py  training_arguments.py
src/utils/visualization/: __init__.py  vis.py
src/vae/: __init__.py  convex_hull_generation.py  model_setup.py  standard_generation.py  train.py  train_mnist.py  trainer.py  visualize.py
src/vae/models/: __init__.py  (+4 more)
tests/: test_vae_model.py
utils/: __init__.py  config.py  misc.py  mlflow_utils.py  utils.py
utils/data/: __init__.py  batch_collector.py  dataset.py  dataset_loaders.py
utils/integrations/: __init__.py  mlflow_integration.py
utils/models/: __init__.py  pretrained.py
vae/: __init__.py  applied_vae.py  cluster_generation.py  convex_hull_generation.py  loss.py  model.py  model_setup.py  pretrained_model.py  setup.py  standard_generation.py  train.py  train_mnist.py  training.py  vae_model.py  visualization.py  visualize.py
vae/analysis/: README.md  feature_space.py  interpolate_pca.py  interpolate_through_class.py
vae/celeba/: dataloader.py  dataset.py  model.py  random_samples.py  standard_generation.py  train.py  trained_model.py
vae/commons/: applied_vae.py  visualization.py
vae/evaluation/: distribution.py  evaluate_all.py  evaluation_setup.py  feature_space.py  generate_images.py
vae/generation/: __init__.py  combined.py  forward_pass.py  interpolation.py  noise.py
vae/mnist/: convex_hull_generation.py  dataloader.py  dataset.py  model.py  model_setup.py  single_generation.py  standard_generation.py  vae_model.py  visualize.py
vae/models/: __init__.py  base.py  base_model.py  celeba.py  loss.py  mnist.py  model_v1.py
(+43 files in other folders)
