[tool.poetry]
name = "data-augmentation"
packages = [
    {include = "vae", from = "src"},
    {include = "utils", from = "src"}
]
version = "0.1.0"
description = "Research on data augmentation methods."
authors = ["Henri Iser <iserh.ml@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
matplotlib = "^3.3.3"
numpy = "^1.19.4"
pandas = "^1.1.4"
PyYAML = "^5.3.1"
seaborn = "^0.11.0"
sklearn = "^0.0"
torch = "^1.7.0"
tqdm = "^4.53.0"
torchvision = "^0.8.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
docformatter = "^1.3.1"
flake8 = "^3.8.4"
flake8-annotations = "^2.4.1"
flake8-black = "^0.2.1"
flake8-bugbear = "^20.11.1"
flake8-builtins = "^1.5.3"
flake8-docstrings = "^1.5.0"
flake8-isort = "^4.0.0"
flake8-use-fstring = "^1.1"
nox = "^2020.8.22"
reindent = "^3.5.1"
tomlkit = "^0.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pyproject_sort = "pyproject_sort:sort_pyproject"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
known_data_augmentation = ["data_augmentation", "tests"]
sections = ["FUTURE","STDLIB","FIRSTPARTY","DATA_AUGMENTATION","THIRDPARTY","LOCALFOLDER"]
